--- a/src/Componenst/Common/ScreenResponse/ScreenResponse.module.scss
+++ b/src/Componenst/Common/ScreenResponse/ScreenResponse.module.scss
@@ -5,11 +5,11 @@
     // border: 1px solid red;
     display: flex;
     flex-direction: column;
-    flex-shrink: 0;
+    // flex-shrink: 0;
     flex-grow: 0;
-    font-size: 12px;
+    font-size: 11px;
     // width: 500px;
-    width: 40%;
+    // min-width: 40%;
     h3{
         margin: 0px 0px 10px 0px;
     }
