--- a/src/Componenst/Common/Flow/Block/Block.module.scss
+++ b/src/Componenst/Common/Flow/Block/Block.module.scss
@@ -7,14 +7,16 @@
     align-items: center;
 
     .block{
-        width: 90px;
-        height: 25px;
+        // position: absolute;
+        width: 110px;
+        height: 30px;
+        overflow: hidden;
         flex-shrink: 0;
         // border: 2px solid black;
         border-radius: 2px;
         // box-shadow: 0px 0px 5px 5px rgb(151, 148, 148);
         margin: 0px 0px 0px 0px;
-        font-size: 13px;
+        font-size: 12px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -29,20 +31,20 @@
             }
     }
     img{
-        width: 60px;
-        height: 30px;
+        width: 40px;
+        height: 20px;
         margin: 0px 0px 0px 0px;
         padding: 5px 0px 5px 0px;
     }
 
     .current{
-        border: 4px solid green;
+        border: 3px solid green;
     }
     .completed{
-        border: 4px solid blue;
+        border: 3px solid blue;
     }
     .notreached{
-        border: 4px solid gray;
+        border: 3px solid gray;
     }
 }
 
