--- a/src/Componenst/Common/Flow/Flow.module.scss
+++ b/src/Componenst/Common/Flow/Flow.module.scss
@@ -3,22 +3,24 @@
     top: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: fit-content;
     height: 100%;
-    padding: 10px 0px 0px 0px;
+    padding: 5px 5px 5px 5px;
     flex-shrink: 0;
-    // border: 1px solid black;
-    width: 400px;
+    // border-left: 1px solid black;
+    // width: 400px;
     .spliter{
-        width: 100%;      
+        width: fit-content; 
+        height: fit-content;     
         flex-shrink: 0;
         display: flex;
         flex-direction: row;
         // align-items: center;
         justify-content: space-between;
         padding: 0px 0px 0px 0px;
-       
+        // border: 1px solid green;
         .column{
             
             // border: 1px solid green;
@@ -41,17 +43,6 @@
         // background-color: aqua;
     }
 
-    // .spliter{
-    //     // width: 200px;
-       
-    //     flex-shrink: 0;
-    //     display: flex;
-    //     flex-direction: row;
-    //     // align-items: center;
-    //     justify-content: space-between;
-    //     padding: 0px 10px 0px 10px;
-    // }
-
     .rightColumn{
         display: flex;
         flex-direction: column;
@@ -59,5 +50,80 @@
         flex-shrink: 0;
         height: 100%;
         
+    }
+
+    .line{
+        // height: 80px;
+        margin-bottom: 5px;
+        display: flex;
+        gap: 20px;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .w240{
+        width: 240px;
+        
+    }
+    .ofs50{
+        margin-left: 50px;
+    }
+    .ofs60{
+        margin-left: 60px;
+    }
+    .ofs70{
+        margin-left: 70px;
+    }
+    .ofs105{
+        margin-left: 105px;
+    }
+    .ofs110{
+        margin-left: 110px;
+    }
+    .ofs125{
+        margin-left: 125px;
+    }
+    .ofs140{
+        margin-left: 140px;
+    }
+    .ofs150{
+        margin-left: 150px;
+    }
+    .ofs160{
+        margin-left: 160px;
+    }
+    .ofs165{
+        margin-left: 165px;
+    }
+    .ofs170{
+        margin-left: 170px;
+    }
+
+    .ofs175{
+        margin-left: 175px;
+    }
+    .ofs180{
+        margin-left: 180px;
+    }
+    .ofs185{
+        margin-left: 185px;
+    }
+    .ofs220{
+        margin-left: 220px;
+    }
+    .ofs230{
+        margin-left: 230px;
+    }
+    .ofs235{
+        margin-left: 235px;
+    }
+    .ofs240{
+        margin-left: 240px;
+    }
+    .ofs245{
+        margin-left: 245px;
+    }
+    .ofs250{
+        margin-left: 250px;
     }
 }
