--- a/src/Componenst/GateToGate/GateToGate.module.scss
+++ b/src/Componenst/GateToGate/GateToGate.module.scss
@@ -1,5 +1,5 @@
 .wrapper{
-    padding: 0px 20px;
+    padding: 0px 5px;
     display: flex;
     flex-direction: column;
     // border: 3px solid rgb(221, 24, 24);
@@ -7,14 +7,13 @@
         display: flex;
         flex-direction: row;
         // border: 3px solid rgb(30, 186, 21);
-        .flow{
-            
-            
-        }
+        
         .data{
             display: flex;
             flex-direction: column;
-            padding: 0px 0px 0px 10px;
+            padding: 0px 5px 0px 5px;
+            border-right: 1px solid black;
+            // overflow:hidden
         }
     }
     
