--- a/src/Componenst/GateToGate/PayBefore3DS/DeskriptionPay3DS/DeskriptionPay3DS.module.scss
+++ b/src/Componenst/GateToGate/PayBefore3DS/DeskriptionPay3DS/DeskriptionPay3DS.module.scss
@@ -12,9 +12,11 @@
     h4{
         padding: 0px 0px 0px 30px;
         margin: 0px 0px 10px 0px;
+        font-size: 25px;
     }
     h3{
         padding: 0px 0px 0px 0px;
         margin: 0px 0px 10px 0px;
+        font-size: 25px;
     }
 }
