--- a/src/Componenst/Home/Home.module.scss
+++ b/src/Componenst/Home/Home.module.scss
@@ -2,86 +2,79 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    // height: 500px;
     padding: 10px;
-    // border: 1px solid red;
     gap: 20px;
-    section{
-        // margin: 0px 0px 20px 20px;
-        
-        // border: 1px solid red;
-    }
 
-    .signature{
-        margin: 5px 0px 20px 0px;
-    }
-    .line{
+    margin-bottom: 30px;
+
+    .content{
         display: flex;
-        flex-direction: row; 
-        width: 400px;
-        flex-wrap: 0;
-        border-bottom: 1px solid black;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-
-    .jsonparserwrapper{
-        display: flex;
-        flex-direction: column;
-        // width: 400px;
+        flex-direction: row;
         height: 100%;
         flex-grow: 1;
-        // border: 1px solid black;
+        border: 3px solid rgb(50, 16, 199);
+        gap: 20px;
+        .left{
+            display: flex;
+            width: 400px;
+            flex-direction: column;
+            flex-shrink: 0;
+            // padding: 10px ;
+            // border: 3px solid rgb(41, 155, 81);
+            .sign{
+                padding: 0px 10px 0px 10px;
+            }
+        }
 
         h4{
             font-size: 19px;
             margin-bottom: 10px;
         }
-        .input{
-            display: flex;
-            flex-direction: column;
-            label{
-                width: 100%;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                margin-bottom: 5px;
-                input{
-                    border: 0px ;
-                    border-bottom: 2px solid black;
-                }
-            }
-        }
-        .jsonparserinput{
-            width: 100%;
-            height: 100%;
-            display: flex;
-            textarea{
-                width: 100%;
-                height: min-content;
-                // resize: none;
-                // height: 100%;
-                flex-grow: 1;
-                display: block;
-                 height: 100%;
-            }
-            
-        }
-        .editor{
-            border: 1px solid green;
-            min-height: 120px;
-            
-        }
-        textarea{
-            width: 100%;
-            height: min-content;
-            // resize: none;
-            // height: 100%;
-            flex-grow: 1;
-            display: block;
-            height: 100%;
-        }
+   
         
+       
+      
+        
+    }
+    .calculatedString{
+        display: flex;
+        flex-direction: column;
+       
+      
+        
+        h4{
+            font-size: 19px;
+            margin-bottom: 10px;
+        }
+        p{
+            font-size: 15px;
+            margin: 0px;
+            padding: 0px;
+            line-height: 1.4;
+        }
+    }
+
+
+    .custString{
+        display: flex;
+        flex-direction: column;
+        h4{
+            font-size: 19px;
+            margin-bottom: 10px;
+        }
+        .text{
+            font-size: 15px;
+            border: 0px;
+        }
+    }
+
+    .lines{
+        min-width: 200px;
+        max-height: 400px;
+        overflow: scroll;
+        border: 1px solid red;
+    }
+    .line{
+        font-size: 12px;
     }
 }
