--- a/src/Componenst/Common/Flow/Rhombus/Rhombus.module.scss
+++ b/src/Componenst/Common/Flow/Rhombus/Rhombus.module.scss
@@ -45,6 +45,9 @@
         .completed{
             background-color: blue;
         }
+        .error{
+            border: 3px solid red;
+        }
         .notreached{
             background-color: gray;
         }
