--- a/src/Componenst/Common/Flow/Block/Block.module.scss
+++ b/src/Componenst/Common/Flow/Block/Block.module.scss
@@ -43,6 +43,9 @@
     .completed{
         border: 3px solid blue;
     }
+    .error{
+        border: 3px solid red;
+    }
     .notreached{
         border: 3px solid gray;
     }
