--- a/src/Componenst/Common/Flow/Ivent/Ivent.module.scss
+++ b/src/Componenst/Common/Flow/Ivent/Ivent.module.scss
@@ -28,8 +28,14 @@
     .current{
         border: 3px solid green;
     }
+    // .finished{
+    //     border: 5px solid green;
+    // }
     .completed{
         border: 3px solid blue;
+    }
+    .error{
+        border: 3px solid red;
     }
     .notreached{
         border: 3px solid gray;
