f.v.01.008 28-06-23 18:00 gignature checking was moved in separate tab

--- a/src/Componenst/Common/AutoResizableTextarea/AutoResizableTextarea.module.scss
+++ b/src/Componenst/Common/AutoResizableTextarea/AutoResizableTextarea.module.scss
@@ -1,13 +1,21 @@
 .wrapper{
-    font-size: 11px;
-    border: 2px solid black;
-    width:100%;
-    height: min-content;
-    resize: none;
-    height: 100%;
+    border: 0px solid black;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     flex-grow: 1;
-    display: block;
-    height: 100%;
-       
-        
+    .textarea{
+        font-size: 11px;
+        border: 0px solid black;
+        width:100%;
+        min-width: 500px;
+        height: min-content;
+        resize: none;
+        height: 100%;
+        flex-grow: 1;
+        display: block;
+        outline : none;
+        background-color: aliceblue;      
+        overflow: scroll;
+    }
 }
