--- a/src/Componenst/Common/Form/Form.module.scss
+++ b/src/Componenst/Common/Form/Form.module.scss
@@ -3,7 +3,7 @@
     min-width: 350px;
     // border: 1px solid red;
     flex-shrink: 0;
-    padding: 10px 10px 10px 10px;
+    // padding: 10px 10px 10px 10px;
     flex-shrink: 0;
     input{
         width: 100%;
@@ -16,6 +16,9 @@
         justify-content: flex-start;
         align-items: flex-start;
         margin: 0px 0px 10px 0px;
+    }
+    .groupData{
+        margin-bottom: 20px;
     }
     .title{
         font-size: 25px;
