--- a/src/Componenst/Common/Header/Header.module.scss
+++ b/src/Componenst/Common/Header/Header.module.scss
@@ -5,10 +5,29 @@
     padding: 10px 0px 10px 20px;
     border-bottom: 2px solid black;
     width: 100%;
-
+    text-decoration: none;
+    color: black;
     .link{
         margin: 0px 30px 0px 0px;
         text-decoration: none;
         font-weight: 700;
+    }
+    .list{
+        position: absolute;
+        top: 50px;
+        border: 1px solid red;
+        padding: 10px 10px 10px 10px;
+        background-color: white;
+        
+        ul{
+            background-color: white;
+            // border: 1px solid red;
+            margin: 0;
+            li{
+                margin-bottom: 8px;
+            }
+
+        }
+        // box-shadow: 10px 5px 5px red;
     }
 }
