f.v.01.010 20-07-23 12:00 dropDown menu fixed

--- a/src/Componenst/Common/Form/Form.module.scss
+++ b/src/Componenst/Common/Form/Form.module.scss
@@ -1,7 +1,7 @@
 .wrapper{
     width: 25%;
     min-width: 350px;
-    // border: 1px solid red;
+    border: 1px solid red;
     flex-shrink: 0;
     // padding: 10px 10px 10px 10px;
     flex-shrink: 0;
