--- a/src/Componenst/Common/Header/Header.module.scss
+++ b/src/Componenst/Common/Header/Header.module.scss
@@ -7,24 +7,33 @@
     width: 100%;
     text-decoration: none;
     color: black;
+    gap:30px;
     .link{
-        margin: 0px 30px 0px 0px;
+        margin: 0px 0px 0px 0px;
         text-decoration: none;
         font-weight: 700;
     }
+
     .list{
         position: absolute;
-        top: 50px;
-        border: 1px solid red;
-        padding: 10px 10px 10px 10px;
-        background-color: white;
+        top: 0px;
+        // left: -10px;
+        // width: 200px;
+        // border: 1px solid green;
+        padding: 50px 0px 0px 0px;
+        // background-color: white;
         
         ul{
+            border: 2px solid black;
             background-color: white;
             // border: 1px solid red;
             margin: 0;
+            padding: 10px 20px 10px 40px;
             li{
                 margin-bottom: 8px;
+                text-decoration: none;
+                font-weight: 700;
+              
             }
 
         }
