--- a/src/Componenst/Home/Home.module.scss
+++ b/src/Componenst/Home/Home.module.scss
@@ -8,7 +8,12 @@
     margin-bottom: 30px;
 
     
-
+    .list{
+        li{
+            padding-bottom: 5px;
+        }
+        }
+        
 }
 
 
