--- a/src/Componenst/Sig/Sig.module.scss
+++ b/src/Componenst/Sig/Sig.module.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     width: 100%;
     padding: 10px;
+    min-height: 700px;
     gap: 20px;
 
     margin-bottom: 30px;
@@ -25,13 +26,16 @@
         height: 100%;
         flex-grow: 1;
         gap: 20px;
+        border: 1px solid red;
 
         @include indent_down;
         .left{
             display: flex;
-            width: 400px;
+            min-width: 500px;
             flex-direction: column;
             flex-shrink: 0;
+            border: 1px solid green;
+            padding: 10px;
         }
         .right{
             display: flex;
@@ -41,6 +45,7 @@
             .sign{
                 padding: 0px 10px 0px 10px;
             }
+            padding: 10px;
         }
         h4{
             font-size: 19px;
