--- a/src/Componenst/Sig/Sig.module.scss
+++ b/src/Componenst/Sig/Sig.module.scss
@@ -9,7 +9,7 @@
    
     flex-shrink: 0;
 }
-
+// =================================
 .wrapper{
     display: flex;
     flex-direction: column;
@@ -19,6 +19,10 @@
     gap: 20px;
 
     margin-bottom: 30px;
+
+    h4{
+        font-size: 20px;
+    }
 
     .lineOne{
         display: flex;
