f.v.01.012 22-07-23 14:30 signature generation is moved in to slice

--- a/src/Componenst/Sig/Sig.module.scss
+++ b/src/Componenst/Sig/Sig.module.scss
@@ -24,6 +24,10 @@
         font-size: 20px;
     }
 
+    .buttons{
+        padding: 5px, ;
+    }
+
     .lineOne{
         display: flex;
         flex-direction: row;
